--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
           <div class="p1-score col-xs-5">
             player 1 score
           </div>
-          <button type="button" class="btn btn-default col-xs-2" aria-label="Left Align">
-            <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-          </button>
+          <div class="col-xs-2" >
+            <button type="button" class="btn btn-default" aria-label="Left Align">
+              <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+            </button>
+          </div>
           <div class="p2-score col-xs-5">
             player 2 score
           </div>
@@ -34,21 +36,21 @@
       </header>
       <div class="row game-board">
          <div class="col-xs-10">
-          <table class="table-bordered">
+          <table class="table-bordered table-responsive">
             <tr>
-              <td id="0,0">X</td>
-              <td id="0,1">O</td>
-              <td id="0,2">X</td>
+              <td id="00">X</td>
+              <td id="01">O</td>
+              <td id="02">X</td>
             </tr>
             <tr>
-              <td id="1,0">X</td>
-              <td id="1,1">X</td>
-              <td id="1,2">X</td>
+              <td id="10">X</td>
+              <td id="11">X</td>
+              <td id="12">X</td>
             </tr>
             <tr>
-              <td id="2,0">0</td>
-              <td id="2,1">X</td>
-              <td id="2,2">X</td>
+              <td id="20">0</td>
+              <td id="21">X</td>
+              <td id="22">X</td>
             </tr>
           </table>
         </div>
